--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react": "^18",
     "react-dom": "^18",
     "usehooks-ts": "^3.0.1",
+    "vivus": "^0.4.6",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/vivus": "^0.4.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
